// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-simple-toast-legacy #render should render alert simple toast 1`] = `
<gux-simple-toast-legacy accent="alert">
  <mock:shadow-root>
    <div class="gux-alert gux-icon">
      <slot name="icon"></slot>
    </div>
    <gux-truncate class="gux-message" max-lines="2">
      <slot name="message"></slot>
    </gux-truncate>
    <gux-dismiss-button class="gux-dismiss" position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  <div slot="message">
    This is the message
  </div>
</gux-simple-toast-legacy>
`;

exports[`gux-simple-toast-legacy #render should render neutral simple toast 1`] = `
<gux-simple-toast-legacy accent="neutral">
  <mock:shadow-root>
    <div class="gux-icon gux-neutral">
      <slot name="icon"></slot>
    </div>
    <gux-truncate class="gux-message" max-lines="2">
      <slot name="message"></slot>
    </gux-truncate>
    <gux-dismiss-button class="gux-dismiss" position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  <div slot="message">
    This is the message
  </div>
</gux-simple-toast-legacy>
`;

exports[`gux-simple-toast-legacy #render should render positive simple toast 1`] = `
<gux-simple-toast-legacy accent="positive">
  <mock:shadow-root>
    <div class="gux-icon gux-positive">
      <slot name="icon"></slot>
    </div>
    <gux-truncate class="gux-message" max-lines="2">
      <slot name="message"></slot>
    </gux-truncate>
    <gux-dismiss-button class="gux-dismiss" position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  <div slot="message">
    This is the message
  </div>
</gux-simple-toast-legacy>
`;

exports[`gux-simple-toast-legacy #render should render warning simple toast 1`] = `
<gux-simple-toast-legacy accent="warning">
  <mock:shadow-root>
    <div class="gux-icon gux-warning">
      <slot name="icon"></slot>
    </div>
    <gux-truncate class="gux-message" max-lines="2">
      <slot name="message"></slot>
    </gux-truncate>
    <gux-dismiss-button class="gux-dismiss" position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  <div slot="message">
    This is the message
  </div>
</gux-simple-toast-legacy>
`;
